--- a/css/estilos.css
+++ b/css/estilos.css
@@ -221,6 +221,9 @@ main{
     main{
         height: auto;
     }
+    .botonContainer .btn{
+        margin-bottom: 30px;
+    }
     .infoProductoContainer{
         margin-top: 30px;
         height: auto;
